1ERE FUNCTION ACCOMPLIE

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
 </table>
 
-      
+      <br><br>
   <div id="firsttext">
     <h4>Contrary to popular belief of Africa</h4>
     Contrary to popular belief, Lorem Ipsum is not simply random text. It has
@@ -587,14 +587,14 @@
  
  </div>
  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8" id="">
-<div class="nameall">
+<div class="nameall" id="allcountries">
 
 
-<ul> <li><a href="/cezayir">Cezayir</a></li>
+<ul> <li id=""><a href="/cezayir">Cezayir</a></li>
     <li><a href="/angola">Angola</a></li>
     <li><a href="/benin">Benin</a></li>
     <li><a href="/botsvana">Botsvana</a></li>
-    <li><a href="/burkina_faso">Burkina Faso</a></li>
+    <li id="burkina"><a href="/burkina_faso">Burkina Faso</a></li>
     <li><a href="/burundi">Burundi</a></li>
     <li><a href="/cape_verde">Cape Verde</a></li>
     <li><a href="/orta_afrika_cumhuriyeti">Orta Afrika Cumhuriyeti</a></li>
@@ -710,7 +710,7 @@
                             </div> 
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5" id="colone2">
-                        <table style="" >
+                        <table>
                             <tr>
                                 <td><img src="images/bf1.jpeg" alt="Burkina_Faso" width="160px" height="150px" class="img-countries"></td>
                                 <td><img src="images/bf2.jpg" alt="Burkina_Faso" width="160px" height="150px"class="img-countries"></td>
