--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <li id="ken"><a href="/kenya">Kenya</a></li>
     <li id="les"><a href="/lesotho">Lesotho</a></li>
     <li id="lib"><a href="/liberya">Liberya</a></li>
-    <li id="lbya"><a href="/libya">Libya</a></li>
+    <li id="lb"><a href="/libya">Libya</a></li>
     <li id="mag"><a href="/madagaskar">Madagaskar</a></li>
     
    
