--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
          <a href="https://masaakistephane.com/turkish.html#srvc" style="text-decoration:none;color:rgb(238, 216, 146)">  MASAAKI.STEPHANE</a></div>
 
  </footer>
+ <div id="ge"></div>
     
 <script src="script.js"></script>
 </body>
