--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <li id="swa"> <a href="/swazilve">Swazilve</a></li>
     <li id="tnz"><a href="/tanzanya">Tanzanya</a></li>
     <li id="tog"><a href="/togo">Togo</a></li>
-    <li id="tuns"><a href="/tunus">Tunus</a></li>
+    <li id="tns"><a href="/tunus">Tunus</a></li>
     <li id="ug"><a href="/uganda">Uganda</a></li>
     <li id="zam"><a href="/zambiya">Zambiya</a></li>
     <li id="zim"><a href="/zimbabve">Zimbabve</a></li>
@@ -341,7 +341,7 @@
          <a href="https://masaakistephane.com/turkish.html#srvc" style="text-decoration:none;color:rgb(238, 216, 146)">  MASAAKI.STEPHANE</a></div>
 
  </footer>
- <div id="ge"></div>
+
     
 <script src="script.js"></script>
 </body>
