--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 				<h4 style="color:#333" >Lorem ipsum dolor sit amet.</h4>
 				<h6 >sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
 			</div>
-			<div class="section-right">
+			<!--<div class="section-right">
 				<button class="learn-more">Learn more</button>
-			</div>
+			</div>-->
 		</div>
 	</section>
 
