--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous">
+      <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
     <title>Afrikaylatanis</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
 			</div>
 			<div class="header-right">
 				<label for="open">
-					<span class="hidden-desktop"></span>
+					<span class="hidden-desktop"><i class="far fa-bars"></i></span>
 				</label>
 				<input type="checkbox" name="" id="open">
 				<nav>
@@ -51,17 +52,7 @@
 			</div>
 		</div>
 	</header>
-<section class="clearfix">
-		<div class="container">
-			<div class="section-left">
-				<h4 style="color:#333" >Lorem ipsum dolor sit amet.</h4>
-				<h6 >sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
-			</div>
-			<!--<div class="section-right">
-				<button class="learn-more">Learn more</button>
-			</div>-->
-		</div>
-	</section>
+
 
 
 
@@ -69,9 +60,19 @@
 
 
 <div class="bigBg">
-
 </div>
-      <br><br>
+<section class="clearfix">
+    <div class="container">
+        <div class="section-left">
+            <h4 style="color:#333" >Lorem ipsum dolor sit amet.</h4>
+            <h6 >sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+        </div>
+        <div class="section-right">
+            <button class="learn-more">Learn more</button>
+        </div>
+    </div>
+</section>
+      <br><br><!--
   <div id="firsttext">
     <h4>Contrary to popular belief of Africa</h4>
     Contrary to popular belief, Lorem Ipsum is not simply random text. It has
@@ -79,7 +80,7 @@
      2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
      College in Virginia, looked up one of the more obscure Latin words, consectetur, 
      from a Lorem Ipsum passage, and going through the cites of the word in classical 
-  </div>
+  </div>-->
 <br>
 
 <div class="maparea" >
@@ -170,7 +171,7 @@
     <li id="ang"><a href="#Comehere">Angola</a></li>
     <li id="ben"><a href="#Comehere">Benin</a></li>
     <li id="bot"><a href="#Comehere">Botsvana</a></li>
-    <li id="burkina"><a href="#Comehere">Burkina Faso</a></li>
+    <li id="burkina"><a href="#Comehere" style="transition: all .8s ease;">Burkina Faso</a></li>
     <li id="bur"> <a href="#Comehere">Burundi</a></li>
     <li id="cap"><a href="#Comehere">Cape Verde</a></li>
     <li id="ortafr"><a href="#Comehere">Orta Afrika Cumhuriyeti</a></li>
