--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 			<div class="header-right">
 				<label for="open">
-					<span class="hidden-desktop"><i class="far fa-bars"></i></span>
+					<span class="hidden-desktop"></span>
 				</label>
 				<input type="checkbox" name="" id="open">
 				<nav>
@@ -72,7 +72,7 @@
         </div>
     </div>
 </section>
-      <br><br><!--
+      <!--
   <div id="firsttext">
     <h4>Contrary to popular belief of Africa</h4>
     Contrary to popular belief, Lorem Ipsum is not simply random text. It has
@@ -81,10 +81,10 @@
      College in Virginia, looked up one of the more obscure Latin words, consectetur, 
      from a Lorem Ipsum passage, and going through the cites of the word in classical 
   </div>-->
-<br>
+
 
 <div class="maparea" >
-
+<br><br>
  <div class="row">
    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
 
