--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-          <span class="glyphicon glyphicon-minus"></span>
+         <!-- <span class="glyphicon glyphicon-minus"></span>-->
           <div class="faqq"> Afrikali Ogrenciler okuduktan sonra neler yapiyorlar? <i class="fas fa-angle-down" style="margin-right:0px"></i></div>
         </a>
       </h4>
@@ -504,7 +504,7 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-          <span class="glyphicon glyphicon-plus"></span>
+        <!--  <span class="glyphicon glyphicon-plus"></span>-->
           <div class="faqq"> Afrikali Ogrenciler okuduktan sonra neler yapiyorlar? <i class="fas fa-angle-down" style="margin-right:0px"></i></div>
         </a>
       </h4>
@@ -519,7 +519,7 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-          <span class="glyphicon glyphicon-plus"></span>
+         <!-- <span class="glyphicon glyphicon-plus"></span>-->
           <div class="faqq"> Afrikali Ogrenciler okuduktan sonra neler yapiyorlar? <i class="fas fa-angle-down" style="margin-right:0px"></i></div>
         </a>
       </h4>
