--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 				</label>
 				<input type="checkbox" name="" id="open">
 				<nav>
-					<a href="#" style="color:white;text-decoration:none">Home</a>
-					<a href="#" style="color:white;text-decoration:none">Inspiration</a>
-					<a href="#" style="color:white;text-decoration:none">Articles</a>
-					<a href="#" style="color:white;text-decoration:none">Works</a>
+					<a href="#" style="color:white;text-decoration:none">Ana Sayfa</a>
+					<a href="#" style="color:white;text-decoration:none">Kultur</a>
+					<a href="#" style="color:white;text-decoration:none">Modern Afrika</a>
+					<a href="#" style="color:white;text-decoration:none">Blog</a>
 					
 				</nav>
 			</div>
