--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       <!------ Include the above in your HEAD tag ---------->
       
    
-        <title>Footer</title>
+     <!--   <title>Footer</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -552,7 +552,7 @@
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-      </head>
+      </head>-->
       
       <footer class="container-fluid bg-grey py-5">
       <div class="">
