--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
  
       
       <footer class="container-fluid bg-grey py-5">
-      <div class="">
+      <div class="container">
          <div class="row">
             <div class="col-md-6">
                <div class="row">
