--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     </tr>
   
 </table>-->
-
+<div style="background-color:black;height:30px;width:100%"></div>
 <header class="clearfix">
+  
     <div class="container">
 			<div class="header-left">
 				<h3 style="color:rgb(238, 216, 146);padding:5px;">Afrikaylatanis</h3 >
@@ -456,7 +457,7 @@
 <h4>TEKNOLOJI GELISMELER</h4>
 <div class="ara2"></div>
 <div>
-    <div class="row">
+    <div class="row"  style="width:90%;margin:0 auto;">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="tech">
                 <h4>Afrikada Ucus Seora</h4>
