--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
     <title>Afrikaylatanis</title>
 </head>
-<body scroll="no" style="overflow-x: hidden">
+<body>
        
    <!--<div class="navbar1">
   
