--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 
 
 
-
 <div class="bigBg">
 </div>
 <section class="clearfix">
@@ -89,6 +88,10 @@
         <div class="section-right">
             <button class="learn-more">Learn more</button>
         </div>
+
+    <label for="open">
+        <span class="hidden-desktop"></span>
+    </label>
     </div>
 </section>
    
