--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
                         <h4 style="margin-left:10px;" > Bu ülke ile ilgili genel bilgilerdir.</h4>
-                        <p style="margin-left:10px; "id="textarea">
+                        <p style="margin-left:10px;font-size:16px; "id="textarea">
                             Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                              roots in a piece of classical Latin literature from 45 BC, making it over
                               2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
