--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				</label>
 				<input type="checkbox" name="" id="open">
 				<nav>
-					<a href="#" style="color:white;text-decoration:none">Ana Sayfa</a>
-					<a href="kultur.html" style="color:white;text-decoration:none">Kultur</a>
-					<a href="modernafrica.html" style="color:white;text-decoration:none">Modern Afrika</a>
-					<a href="blog.html" style="color:white;text-decoration:none">Blog</a>
+					<a href="#" style="text-decoration:none">Ana Sayfa</a>
+					<a href="kultur.html" style="text-decoration:none">Kultur</a>
+					<a href="modernafrica.html" style="text-decoration:none">Modern Afrika</a>
+					<a href="blog.html" style="text-decoration:none">Blog</a>
 					
 				</nav>
 			</div>
@@ -446,7 +446,7 @@
 <div class="separator_line"></div>
 <br>
 <h5>TEKNOLOJI GELISMELER</h5>
-<div class="ara2"></div>
+<div class="ara02"></div>
 <div>
     <div class="row"  style="width:90%;margin:0 auto;">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -679,7 +679,7 @@
 </div>
 </div>
 
-
+<div style="background-color:rgb(238, 216, 146);height:3px;width:100%"></div>
     
 <script src="script.js"></script>
 <script src="data.js"></script>
