--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 <section style="width:87%;margin:0 auto">
 <div style="background-color:rgb(242, 248, 238)">
     <h5>Sikca Sorulan Sorular</h5>
-<div class="containe" >
+<div class="contai--" >
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
