developement de ModernAfrika

--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="tech">
                 <h5>Afrikada Ucus Seora</h5>
-               <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+               <p>
+                   Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                              roots in a piece of classical Latin literature from 45 BC, making it overg
                               through the cites of the word in classical 
                               literature, discovered the undoubtable source. Lorem Ipsum comes from sections 
