--- a/blog.html
+++ b/blog.html
@@ -511,7 +511,7 @@
 
               <div class="row blog-sections-riches">
                 
-                 <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 oneTopic">
+                 <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 oneTopic1">
                     <br>
                     <h4> Patrice Lumumba Yasami ile ilgili kisa bir ozelt  roots in a piece of classical Latin  </h4>
                     <hr>
