--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
               </label>
               <input type="checkbox" name="" id="open">
               <nav>
-                 <a href="#" style="text-decoration:none">Ana Sayfa</a>
+                 <a href="index.html" style="text-decoration:none">Ana Sayfa</a>
                  <a href="kultur.html" style="text-decoration:none">Kultur</a>
                  <a href="modernafrica.html" style="text-decoration:none">Modern Afrika</a>
                  <a href="blog.html" style="text-decoration:none">Blog</a>
